# football_analysis_yolo

./: .gitignore  AGENTS.md  README.md  live_preview.py  main_live.py  pyproject.toml
camera_movement_estimator/: camera_movement_estimator.py
docs/: 2026-07-10-sam3-hf-benchmark-spec.md
live/: __init__.py  broadcaster.py  capture.py  pipeline.py  preview.py  scene_cut.py  shot_gate.py
scripts/: bench_models.py  bench_sam3_hf.py
speed_and_distance_estimator/: speed_and_distance_estimator.py
team_assigner/: team_assigner.py
trackers/: tracker.py
